--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/springsecurity_db?characterEnc
 spring.datasource.username=root
 spring.datasource.password=zgxfcd!0236
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
